Fix Safari alignment

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-  display: flex;
+  /* display: flex;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: -moz-box;
+  display: -moz-box; */
   max-width: 100vw;
   max-height: 100vh;
   flex-flow: column;
@@ -14,7 +14,6 @@ body {
   background-color: lightgray;
   font-family: arial;
 }
-
 /* ul .nav-links {
   display: flex;
   flex-direction: row;
@@ -41,6 +40,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   padding: 0;
   margin: 0;
   min-width: 100vw;
@@ -145,6 +145,21 @@ body {
   -webkit-flex-flow: column;
   justify-content: center;
   align-self: center;
+  margin: 1%;
+}
+
+.area-map h3 {
+  display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: -moz-box;
+  flex-flow: row;
+  -webkit-flex-flow: row;
+  background-color: white;
+  border-radius: 10px;
+  justify-content: center;
+  align-self: center;
 }
 .navbar img {
   display: flex;
@@ -171,11 +186,11 @@ body {
 
 
 .nav-img {
-  display: flex;
-  display: -webkit-box;
+  display: none;
+  /* display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: -moz-box;
+  display: -moz-box; */
   align-self: center;
   max-width: 10%;
   margin: 10px;
@@ -258,7 +273,7 @@ body {
 }
 
 .main-slogan {
-
+  visibility: hidden;
 }
 .logo {
   display: inline-block;
@@ -296,6 +311,7 @@ footer {
 footer p {
   align-self: center;
   align-content: center;
+  justify-content: center;
 }
 
 footer img {
@@ -322,6 +338,7 @@ footer img {
   max-width: 40vh;
   max-height: 40vh;
   justify-content: center;
+  margin: 1%;
 }
 
 .contact {
@@ -344,12 +361,18 @@ footer img {
 }
 
 .contact .submit {
-  min-width: 5vw;
+  min-width: 20vw;
+  min-height: 10vh;
   background-color: #95A5A6;
   align-self: center;
   align-items: center;
   align-content: center;
   color: white;
+}
+
+.contact h3 {
+  background-color: white;
+  border-radius: 10px;
 }
 
 .icon-container {
@@ -378,7 +401,8 @@ footer img {
   align-items: center;
   justify-content: space-evenly;
   margin-top: 40px;
-  /* background-color: purple; */
+  min-width: 100%;
+  background-color: darkgray;
 }
 
 .navbar {
@@ -436,7 +460,7 @@ li:hover {
   display: -moz-box;
   justify-content: space-evenly;
   align-items: center;
-  border-bottom: 1px solid black;
+  /* border-bottom: 1px solid black; */
   flex-flow: row wrap;
   -webkit-flex-flow: row wrap;
   /* background-color: lightblue; */
@@ -508,6 +532,10 @@ li:hover {
   /* background-color: purple; */
 }
 
+.service-heading h3 {
+  background-color: white;
+  border-radius: 10px;
+}
 .service-description {
   display: flex;
   display: -webkit-box;
@@ -544,4 +572,16 @@ li:hover {
   min-width: 40vw;
   min-height: 40vh;
   color: white;
+}
+
+.form-content {
+  display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: -moz-box;
+  align-content: center;
+  align-items: center;
+  flex-flow: column;
+  -webkit-flex-flow: column;
 }
